--- a/manifest.json
+++ b/manifest.json
@@ -10,58 +10,46 @@
   "description": "The Just Chatting Twitch and Youtube Live alternative live streaming service",
   "icons": [
     {
-      "src": "/img/icons/spiel-16x16.png",
-      "type": "image/png",
-      "sizes": "16x16",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/img/favicon.png",
-      "type": "image/png",
-      "sizes": "32x32",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/img/icons/spiel-48x48.png",
+      "src": "/img/icons/maskable_icon_x48.png",
       "type": "image/png",
       "sizes": "48x48",
-      "purpose": "any maskable"
+      "purpose": "maskable any"
     },
     {
-      "src": "/img/icons/spiel-128x128.png",
+      "src": "/img/icons/maskable_icon_x72.png",
+      "type": "image/png",
+      "sizes": "72x72",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "/img/icons/maskable_icon_x96.png",
+      "type": "image/png",
+      "sizes": "96x96",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "/img/icons/maskable_icon_x128.png",
       "type": "image/png",
       "sizes": "128x128",
-      "purpose": "any maskable"
+      "purpose": "maskable any"
     },
     {
-      "src": "/img/icons/spiel-144x144.png",
-      "type": "image/png",
-      "sizes": "144x144",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/img/icons/spiel-152x152.png",
-      "type": "image/png",
-      "sizes": "152x152",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/img/icons/spiel-192x192.png",
+      "src": "/img/icons/maskable_icon_x192.png",
       "type": "image/png",
       "sizes": "192x192",
-      "purpose": "any maskable"
+      "purpose": "maskable any"
     },
     {
-      "src": "/img/icons/spiel-384x384.png",
+      "src": "/img/icons/maskable_icon_x384.png",
       "type": "image/png",
       "sizes": "384x384",
-      "purpose": "any maskable"
+      "purpose": "maskable any"
     },
     {
-      "src": "/img/icons/spiel-512x512.png",
+      "src": "/img/icons/maskable_icon_x512.png",
       "type": "image/png",
       "sizes": "512x512",
-      "purpose": "any maskable"
+      "purpose": "maskable any"
     }
   ]
 }
